# python-hello-service

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: master-ci.yml  python-hello-service-ci.yml
app/: main.py  metrics.py
app/api/: hello_controller.py  routes.py
app/controllers/: hello_controller.py  metrics_controller.py
app/models/: hello_dto.py
app/service/: metrics_service.py
deploy/: deployment.yml  service.yml  servicemonitor.yml  values-dev.yaml
test/controllers/: test_hello_controller.py
