[project]
name = "fastapi-skeleton"
version = "0.1.0"
description = "FastAPI Skeleton"
authors = [
    {name = "Joseph McDonough"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
