[tool.poetry]
name = "fastapi-skeleton"
version = "0.1.0"
description = "FastAPI Skeleton"
authors = ["Joseph McDonough"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.115.13,<0.116.0"
uvicorn = { version = ">=0.34.3,<0.35.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
